--- a/typedesign-framework.html
+++ b/typedesign-framework.html
@@ -114,6 +114,10 @@
 			color:  #666;
 		}
 
+		.prealpha {
+			color:  #CCC;
+		}
+
 		h3, h4, h5, h6, h7, h8, h9 {font-size: 1.25em!important; margin-top: 0!important;}
 
 
@@ -489,10 +493,11 @@
 			<li>wide (expanded, extended)</li>
 			<li>extra wide</li>
 			<br>
-			<li>proportional</li>
-			<li>proportional, height variation</li>
+			<li>proportional</li><!--
+			<li>proportional, height variation</li> -->
 			<li>mono</li>
 			<li>mono-proportional (actual shapes at the same width)</li>
+			<li>unitization</li>
 			<br>
 			<li>Capitalis Monumentalis</li>
 			<li>Helvetica</li>
@@ -511,7 +516,7 @@
 			<p>Hierarchy note:<i>Width</i> and <i>height</i> could be grouped together under <i>skeleton</i> > <i>proportion</i></p>
 
 		<h2 class="large_icons"><img class="icon" src="media/icon_spacing.gif"/>
-			Width > Spacing</h2>
+			Spacing (should be sub of width)</h2>
 		<div class="alt_label">fitting, tracking</div>
 		<p>With this variable the focus lies on the spacing inbetween the characters and respectively their total width. As the <i>spacing</i> is a rather important variable it has its own position even though it could be grouped under <i>width</i>.<br/>
 		<br/>
@@ -533,10 +538,12 @@
 			<li>regular</li>
 			<li>tight</li>
 			<li>loose</li>
-			<br/>
 			<li>proportional</li>
-			<li>mono</li>
+			<li>mono spaced</li>
 			<li>irregular</li>
+			<br>
+			<li>uniwidth (locked advanced width)</li>
+			<br/>
 			<li></li>
 			</ul>
 
@@ -848,6 +855,7 @@
 
 
 	<h1 class="alpha">Formal Variables (systematic hierarchies)</h1>
+		<p>This structure evolved during my studies between 2012 and 2015. The descriptions and illustrations are unfortunately not listed here. When I find the time I will translate my (german) writing and add them.</p>
 		<h2>Higher Aspects</h2>
 		<div class="alt_label">Complex Formal Aspects</div>
 			<h3>Size</h3>
@@ -858,8 +866,6 @@
 			<h3>Texture</h3>
 			<h3>Complexity</h3>
 			<h3>Rhythm/Consistency</h3>
-
-
 
 		<h2>Setting</h2>
 			<h3>Position</h3>
@@ -883,7 +889,8 @@
 			<h3>Dimensionality</h3>
 			<h3>Colors</h3>
 
-		<h1 class="alpha">Formal Variables (UI/CSS)</h1>
+		<!-- <h1 class="prealpha">Formal Variables (UI/CSS)</h1>
+		<p>this needs more thinking before being pushed to the public.</p>
 		<h2>Basic</h2>
 			<h3>Text</h3>
 				<h4>font-family</h4>
@@ -904,7 +911,7 @@
 
 			<p>I have many ideas, but for the moment I would like to leave it open for discussion.</p>
 
-			<!-- <h3>Script: Latin, ...</h3>
+			<h3>Script: Latin, ...</h3>
 			<h3>Language: English, German, Japanese</h3>
 			<h3>Typeface (font-family)</h3>
 			<h3>Size (font-size)</h3>
@@ -917,9 +924,9 @@
 			<h3>Line Height (line-height)</h3>
 			<h3>Optical Size</h3>
 			<h3>
-			<h3>font-size-adjust</h3> -->
+			<h3>font-size-adjust</h3>
 		<h2>Custom</h2>
-
+		-- -->
 
 		<h1 class="alpha">Formal Variables (typecooker.com)</h1>
 			<h2>Width</h2>
